# CrunchFS

./: .gitignore  CMakeLists.txt  README.md  REPORT_NOTES.md  demo.sh  summary.txt
demo-tool-test/: README.md  hello_fs.cpp
docs/: metadata-format-v1.md
fuse-test/: hello_fs  passthrough_cfs  passthrough_cfs.cpp
src/: chunk_store.cpp  chunk_store.hpp  compresslib.h  conpresslib.cpp  fuse_ops.cpp  fuse_ops.hpp  main.cpp  metadata.cpp  metadata.hpp  passthrough_cfs.cpp  test.cpp  thread_pool.cpp  thread_pool.hpp
src/compression/: interface.hpp  zstd_backend.cpp
